--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   google_nav_bar: ^5.0.7
   dashed_circular_progress_bar: ^0.0.6
   provider: ^6.1.2
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
