--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "firebase-admin": "^13.0.1",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "ws": "^8.18.0"
   }
 }
