--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   provider: ^6.1.2
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
+  firebase_database: ^11.2.0
 
 dev_dependencies:
   flutter_test:
