--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase-admin": "^13.0.1",
     "mongoose": "^8.8.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
+    "python-shell": "^5.0.0",
     "ws": "^8.18.0"
   }
 }
