--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
   firebase_database: ^11.2.0
+  cloud_firestore: ^5.5.1
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
