--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,5 +32,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/data.json
-    - assets/images
+    - model/news_predictions.json
+    # - assets/images
