Prettify UI/UX. Added Splash Image Added Launcher Icon Added Logo in the Login/Sign Up screen Improved TextFields

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   dashed_circular_progress_bar: ^0.0.6
   provider: ^6.1.2
+  # flutter_local_notifications: ^18.0.1
   firebase_core: ^3.8.1
   firebase_auth: ^5.3.4
   firebase_database: ^11.2.0
@@ -28,9 +29,23 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.2
+  flutter_native_splash: ^2.4.3
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/kukhurikaa_icon_512x512.png"
+  min_sdk_android: 21
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: "assets/Kukhurikaa_logo_transparent.png"
+    
 flutter:
   uses-material-design: true
   assets:
     - model/news_predictions.json
-    # - assets/images
+    - assets/kukhurikaa_icon_512x512.png
+    - assets/kukhurikaa_logo_transparent.png
+    - assets/kukhurikaa_icon.png
+    - assets/kukhurikaa_logo_white.png
+    - assets/kukhuriKaa_logo_transparent_splash.png
